--- a/MeniaDemo/src/app/header/header.component.html
+++ b/MeniaDemo/src/app/header/header.component.html
@@ -14,10 +14,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled">Disabled</a>
+        <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
+        <a class="nav-link"  routerLink="/products" >Products</a>
+        <a class="nav-link"  routerLink="/user">user</a>
+        <a class="nav-link"  routerLink="/posts" >Posts</a>
+        <a class="nav-link"  routerLink="/login" >login</a>
+        <a class="nav-link"  routerLink="/register" >register</a>
+
+
         <button [disabled]="isDisabled" type="button" class="btn btn-primary">
           Primary
         </button>
